<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main"
    android:paddingBottom="28dp"
    android:background="@color/white_theme">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56dp"
        app:title="@string/title"
        app:titleTextColor="@color/white"
        />

    <Button
        android:id="@+id/search_button"
        style="@style/white_theme_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/search"
        app:icon="@drawable/search_icon" />

    <Button
        android:id="@+id/media_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/media"
        app:icon="@drawable/media_icon"
        style="@style/white_theme_button"/>

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/settings"
        app:icon="@drawable/settings_icon"
        style="@style/white_theme_button" />

</LinearLayout>