<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56dp"
        app:title="@string/settings"
        app:navigationIcon="@drawable/arrow_back"
        app:titleTextAppearance="@style/title"
        android:layout_marginBottom="@dimen/_24dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/white_theme_settings_text"
            android:text="@string/dark_theme" />
        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:trackTint="@color/color_switch_1"
            android:thumbTint="@color/gray"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56dp"
        android:text="@string/share_app"
        style="@style/white_theme_settings_text"
        app:drawableEndCompat="@drawable/share_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56dp"
        android:text="@string/support"
        style="@style/white_theme_settings_text"
        app:drawableEndCompat="@drawable/support_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56dp"
        android:text="@string/user_agreement"
        style="@style/white_theme_settings_text"
        app:drawableEndCompat="@drawable/mark_right" />

</LinearLayout>