<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/audio_player_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        style="@style/title_player_arrow"
        app:navigationIcon="@drawable/arrow_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/album_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/track_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/track_name"
        style="@style/player_text_color"
        android:textSize="@dimen/_22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/album_image" />

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:text="@string/artist_name"
        style="@style/player_text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/track_name" />

    <View
        android:id="@+id/play"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        style="@style/play_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist_name"
        />

    <View
        android:visibility="gone"
        android:id="@+id/pause"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        style="@style/pause_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist_name"
        />

    <View
        android:id="@+id/queue"
        style="@style/queue_btn"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist_name" />

    <View
        android:id="@+id/favorite"
        style="@style/favor_btn"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/artist_name" />

    <TextView
        android:id="@+id/preview_track_time"
        style="@style/player_text_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_16dp"
        android:gravity="center"
        android:text="@string/zero_time"
        android:layout_marginTop="134dp"
        app:layout_constraintTop_toBottomOf="@+id/artist_name" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="205dp" />

    <TextView
        android:id="@+id/duration"
        style="@style/description_track_left"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:text="@string/duration"
        app:layout_constraintBottom_toTopOf="@+id/album_name"
        app:layout_constraintEnd_toStartOf="@+id/duration_value"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/duration_value"
        style="@style/description_track_right"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/zero_time"
        app:layout_constraintBottom_toTopOf="@+id/album_name_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/album_name"
        style="@style/description_track_left"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:text="@string/album"
        app:layout_constraintBottom_toTopOf="@+id/year"
        app:layout_constraintEnd_toStartOf="@+id/duration_value"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/album_name_value"
        style="@style/description_track_right"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/album_name"
        app:layout_constraintBottom_toTopOf="@+id/year_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/year"
        style="@style/description_track_left"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@+id/genre"
        app:layout_constraintEnd_toStartOf="@+id/duration_value"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/year_value"
        style="@style/description_track_right"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/genre_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/genre"
        style="@style/description_track_left"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:text="@string/genre"
        app:layout_constraintBottom_toTopOf="@+id/country"
        app:layout_constraintEnd_toStartOf="@+id/duration_value"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/genre_value"
        style="@style/description_track_right"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/country_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/country"
        style="@style/description_track_left"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/duration_value"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/country_value"
        style="@style/description_track_right"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline" />


</androidx.constraintlayout.widget.ConstraintLayout>