<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.media.CreatePlayListFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="audio_player_background"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:titleTextAppearance="@style/title_attrs_settings"
            android:layout_height="@dimen/_56dp"
            app:title="@string/new_playlist"
            style="@style/title_player_arrow"
            />

        <ImageView
            android:id="@+id/playlist_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="26dp"
            android:layout_marginHorizontal="@dimen/_24dp"
            android:background="@drawable/empty_draw"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/playlist_name_input"
            style="@style/playlist_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:hint="@string/name_">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/playlist_name_edit_text"
                style="@style/playlist_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/playlist_description_input"
            style="@style/playlist_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:hint="@string/description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/playlist_description_edit_text"
                style="@style/playlist_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:inputType="textMultiLine"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_btn"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginHorizontal="17dp"
            android:text="@string/create"
            android:layout_marginTop="132dp"
            style="@style/create_btn"
            android:textSize="@dimen/_16sp"
            android:fontFamily="@font/ys_text"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue_theme"
            android:layout_marginBottom="32dp"
            />

    </LinearLayout>

</FrameLayout>