<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/gray_background"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/playlistCover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_24dp"

                android:scaleType="centerCrop"

                android:src="@drawable/placeholder_big" />

            <TextView
                android:id="@+id/playlistName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:textSize="24sp"
                style="@style/playlist_text"/>

            <TextView
                android:id="@+id/playlist_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:layout_marginHorizontal="@dimen/_16dp"
                style="@style/playlist_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/playlist_duration_and_tracks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:layout_marginHorizontal="@dimen/_16dp"
                style="@style/playlist_text"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/share_btn"
                    android:layout_width="@dimen/_24dp"
                    android:layout_height="24dp"
                    android:layout_marginHorizontal="@dimen/_16dp"
                    android:background="@drawable/share_icon"
                    android:backgroundTint="@color/dark_theme"/>

                <ImageButton
                    android:id="@+id/menu_btn"
                    android:layout_width="@dimen/_24dp"
                    android:layout_height="@dimen/_24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_more" />

            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:navigationIcon="@drawable/arrow_back"
            android:layout_width="@dimen/_56dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/menu_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#99000000"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="226dp"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:behavior_hideable="false"
        style="@style/bottom_sheet_background">

        <View
            android:layout_marginTop="@dimen/_8dp"
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            style="@style/box"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracksRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_12dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:behavior_hideable="true"
        style="@style/bottom_sheet_background"
        >

        <View
            android:layout_marginTop="@dimen/_8dp"
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            style="@style/box"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/playlist_image_small"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginVertical="@dimen/_8dp"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="@dimen/_8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/menu_playlist_name"
                    android:layout_width="match_parent"
                    android:layout_height="19dp"
                    android:textSize="@dimen/_16sp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="14dp"
                    style="@style/player_text_color"
                    android:text="@string/some_text"/>

                <TextView
                    android:id="@+id/menu_track_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    style="@style/player_text_color"
                    android:text="@string/some_text"/>
                
            </LinearLayout>
                

        </LinearLayout>


        <TextView
            android:id="@+id/menu_share"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:text="@string/share"
            android:textSize="16sp"
            style="@style/player_text_color"/>

        <TextView
            android:id="@+id/menu_edit"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:text="@string/edit"
            android:textSize="16sp"
            style="@style/player_text_color"/>

        <TextView
            android:id="@+id/menu_delete"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:text="@string/delete"
            android:textSize="16sp"
            style="@style/player_text_color"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>